--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-.app {
-  font-family: Arial, Helvetica, sans-serif;
+.App {
+  font-family: 'Open Sans Condensed', sans-serif;
   color: #222222;
 }
 
@@ -7,6 +7,7 @@ button {
   border-radius: 3px;
   padding: 0.5em;
   font-size: 1em;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 
 button:hover {
